import-dialog: connect the right signal to get currently selected folder

Instead of using the current-directory-changed signal on
GtkFileChooserButton, use the selection-changed signal which is
emitted both when a preselected directory is clicked by the user and
also when the file selection dialog is opened by the user.

https://bugzilla.gnome.org/show_bug.cgi?id=701194